sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: '(' expected but identifier found.
  while i!=taille-1 {
        ^AlgGnomeSort:18: error: illegal start of simple expression
} 
^